istio-manifests/canary-service/destination-all.yaml
# destination-v2.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: productcatalogservice
  namespace: product-catalog
spec:
  host: productcatalogservice.product-catalog.svc.cluster.local
  # trafficPolicy:
  #   connectionPool:
  #     http:
  #       http1MaxPendingRequests: 1
  #       http2MaxRequests: 1
  #       maxRequestsPerConnection: 1
  #     tcp:
  #       maxConnections: 1
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: v2
      name: v2
