istio-manifests/canary-service/virtualservice-v1.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: productcatalogservice
  namespace: product-catalog
spec:
  hosts:
    - productcatalogservice.product-catalog.svc.cluster.local
  http:
    - route:
        - destination:
            host: productcatalogservice
            subset: v1
