istio-manifests/canary-service/vs-split.yaml
# vs-split-traffic.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: productcatalogservice
  namespace: frontend
spec:
  hosts:
    - productcatalogservice.product-catalog.svc.cluster.local
  http:
    - route:
        - destination:
            host: productcatalogservice.product-catalog.svc.cluster.local
            subset: v1
          weight: 75
        - destination:
            host: productcatalogservice.product-catalog.svc.cluster.local
            subset: v2
          weight: 25
